--- a/pom.xml
+++ b/pom.xml
@@ -14,17 +14,6 @@
     
     <developers>
         <developer>
-            <name>Jarmo Kalaoja</name>            
-            <email>jarmo.kalaoja@vtt.fi</email>
-            <url>https://www.linkedin.com/in/jarmo-kalaoja-68558380</url>
-            <organization>Valtion Teknillinen Tutkimuskeskus</organization>
-            <organizationUrl>http://www.vtt.fi/</organizationUrl>
-            <timezone>UTC+02:00</timezone>
-            <properties>
-                <picUrl>http://gravatar.com/userimage/xxx</picUrl>
-            </properties>        
-        </developer>
-        <developer>
             <name>Maxime Lefrançois</name>            
             <email>maxime.lefrancois@emse.fr</email>
             <url>http://maxime-lefrancois.info/</url>
@@ -35,7 +24,21 @@
                 <picUrl>http://gravatar.com/userimage/102097381/dac8aeb15edac9a93e09a7974743957f</picUrl>
             </properties>        
         </developer>
-        <developer>
+    </developers>
+    
+    <contributors>
+        <contributor>
+            <name>Jarmo Kalaoja</name>            
+            <email>jarmo.kalaoja@vtt.fi</email>
+            <url>https://www.linkedin.com/in/jarmo-kalaoja-68558380</url>
+            <organization>Valtion Teknillinen Tutkimuskeskus</organization>
+            <organizationUrl>http://www.vtt.fi/</organizationUrl>
+            <timezone>UTC+02:00</timezone>
+            <properties>
+                <picUrl>http://gravatar.com/userimage/xxx</picUrl>
+            </properties>        
+        </contributor>
+        <contributor>
             <name>Hannu Järvinen</name>            
             <email>hannu@asema.com</email>
             <url>https://www.linkedin.com/in/hannu-j%C3%A4rvinen-532b563</url>
@@ -45,8 +48,16 @@
             <properties>
                 <picUrl>http://gravatar.com/avatar/8c8de565769a4b5b2136df53d76b2533</picUrl>
             </properties>        
-        </developer>
-    </developers>
+        </contributor>
+        <contributor>
+            <name>Antoine Zimmermann</name>            
+            <email>antoine.zimmermann@emse.fr</email>
+            <url>http://www.emse.fr/~zimmermann/</url>
+            <organization>Ecole des mines de Saint-Etienne</organization>
+            <organizationUrl>http://www.mines-stetienne.fr/</organizationUrl>
+            <timezone>UTC+01:00</timezone>
+        </contributor>
+    </contributors>
     
 
     <organization>
@@ -164,6 +175,7 @@
 
 
     <build>
+        <finalName>${artifactId}</finalName>
         <pluginManagement>
             <plugins>
                 <!-- ========================  -->
@@ -198,6 +210,7 @@
                                 <reports>
                                     <report>summary</report>
                                     <report>issue-tracking</report>
+                                    <report>scm</report>
                                     <report>license</report>
                                     <report>project-team</report>
                                 </reports>
