--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,31 @@
-*.class
+# max
+notesmax.txt
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# NetBeans
+nbactions.xml
+nb-configuration.xml
+/nbproject/
 
-# Package Files #
-*.jar
-*.war
-*.ear
+# Eclipse
+.classpath
+.project
+.settings
+.recommenders
+.metadata
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-/target/
+# Maven
+target/
+*/target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# deploy website
+.sh
+.bat
