--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,7 @@
                             <exclude>**/*.classpath</exclude>
                             <exclude>**/target/**/*</exclude>
                             <exclude>**/dependency-reduced-pom.xml</exclude>
+                            <exclude>**/catalog-v001.xml</exclude>
                         </excludes>
                     </configuration>
                 </plugin>
