--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,7 @@
                         <excludeSubProjects>true</excludeSubProjects>
                         <excludes>
                             <exclude>make.sh</exclude>
+                            <exclude>**/readme.md</exclude>
                             <exclude>**/pom.xml</exclude>
                             <exclude>**/src/site/**/*.*</exclude>
                             <exclude>**/src/main/webapp/**/*.*</exclude>
